--- a/gt-frontend/index.html
+++ b/gt-frontend/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
 
-    <link data-trunk rel="css" href="bootstrap/css/bootstrap.min.css"
-        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link data-trunk rel="css" href="bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
